--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/heygourab/<your-repo>.git"
+    "url": "https://github.com/heygourab/perfect_dark_theme"
   }
 }
