Refine theme description for clarity and precision

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "perfect-dark-theme",
   "displayName": "Perfect Dark Theme",
-  "description": "A minimal dark theme for night owls 🦉. Perfect for high contrast and readability.Inspirer by NextJs decimation theme.",
+  "description": "A sleek dark theme optimized for night coding 🦉. Features high contrast colors and enhanced readability, inspired by Next.js documentation theme.",
   "version": "0.0.1",
   "publisher": "heygourab",
   "engines": {
